# simplepost

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autoclean.sh  bootstrap  configure.ac
doc/: Doxyfile  Makefile.am
man/: Makefile  Makefile.am  simplepost.1
src/: Makefile  Makefile.am  config.h  config.in  impact.c  impact.h  main.c  simplearg.c  simplearg.h  simplecmd.c  simplecmd.h  simplemain.cpp  simplepipe.c  simplepipe.h  simplepost.c  simplepost.cpp  simplepost.h  simplestr.c  simplestr.h
